[metadata]
name = fawoc
author = Tullio Facchinetti
author_email = tullio.facchinetti@unipv.it
python_requires = '>= 3.6'
summary = Fast Word Classifier
url = https://github.com/robolab-pavia/fawoc
license = GPL-3
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = fawoc
install_requires =
	prompt_toolkit
	slrkit-utils

include_package_data = True

[options.entry_points]
console_scripts =
    fawoc = fawoc.fawoc:main
